--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,1 +1,17 @@
 <h1> {{message}} </h1>
+
+
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        {% if title %}
+        <title> {{ title }}</title>
+        {% else %}
+        <title> Welcome to the best Movie Review website </title>
+        {% endif %}
+    </head>
+    <body>
+
+    </body>
+</html>
