--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -22,7 +22,7 @@
         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4" style="background-color: #FFFFFF;">
                 <li class="well" style="list-style:none;background-color:#b76e79;">
                     <a href="{{article.url}}"style="text-decoration:none;">
-                      <h3 style="font-size:16px;color:#FFFFFF">
+                      <h3 style="font-size:16px;color:#faf0dc">
                           {{article.title}}
                       </h3>
                        <p style="font-size:10px;">  Date: {{article.publishedAt[:10]}} </p>
