add more content in the navbar

--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -7,14 +7,16 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <!-- <a class="navbar-brand" href="/">THE GREAT NEWS</a> -->
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li><a style="font-size: 30px;" href="/">HOME</a></li>
-        <li><a style="font-size: 30px;" href="/">SPORTS</a></li>
-        <li><a style="font-size: 30px;" href="/">BUSINESS</a></li>
         <li><a style="font-size: 30px;" href="/">GENERAL</a></li>
+        <li><a style="font-size: 30px;" href="/">BUSINESS</a></li>
+        <li><a style="font-size: 30px;" href="/">SPORTS</a></li>
+        <li><a style="font-size: 30px;" href="/">TECHNOLOGY</a></li>
+        <li><a style="font-size: 30px;" href="/">STYLE</a></li>
+        <li><a style="font-size: 30px;" href="/">POLITICS</a></li>
     </div>
   </div>
   </li>
